# eros-cli-python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tempnotes
.github/workflows/: build_binary.yml  release_test.yml  test_installation.yml
docs/: diagrams.drawio
src/app_log/: __init__.py  app_log.py
src/app_terminal/: __init__.py  app_terminal.py
src/eros_app/: app_cli.py  app_log.py  app_perf.py  app_test.py  app_zmq.py  entrypoint.py  eros_terminal.py  transport_selection.py
src/eros_cli/: __main__.py  entrypoint.py  transport_selection.py
src/eros_cli/app/: app_cli.py  app_dump.py  app_log.py  app_machine_cli.py  app_perf.py  app_zmq.py  decorators.py
src/eros_cli/app/terminal/: eros_terminal.py
src/eros_cli/app/utils/: eros_terminal.py  transport_status_log.py
src/eros_cli/transport/: drv_tcp.py  drv_uart.py  drv_udp.py  drv_zmq.py
src/main/: __init__.py
workflows/: build_binary.yml
