[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "eros-view"
authors = [
    {name = "Floris Vernieuwe", email = "floris@vernieuwe.eu"},
]
description = "A package to view EROS logs"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "click==8.1.3",
    "eros@git+https://github.com/Florioo/eros-core-python.git",
    "blessed",
]

dynamic = ["version"]

[project.scripts]
eros = "eros_cli:cli"
