[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "eros-cli"
authors = [
    {name = "Floris Vernieuwe", email = "floris@vernieuwe.eu"},
]
description = "A package to view EROS logs"

readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]


dependencies = [
    "click==8.1.3",
    "eros-core@git+https://github.com/Florioo/eros-core-python.git",
    "blessed",
    'si-prefix==1.2.2',
    'rich==13.4.2'
]

dynamic = ["version"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project.scripts]
eros = "eros_cli:cli"
